Language/UserIntercationParser.py
# Generated from UserIntercation.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class UserIntercationParser ( Parser ):

    grammarFileName = "UserIntercation.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'USE '", "' DRIVING PATTERN'", "' WITH '", 
                     "';'", "'CANCLE CURRENT DRIVING PATTERN;'", "'SET '", 
                     "'SET PREFERENCES'", "'END'", "'='", "'SET CONSTRAINTS'", 
                     "'SET SCENARIO'", "'FOR TRAFFIC SIGNAL '", "'IF ENTER '", 
                     "'Detect Obstacle THEN'", "'ENCOUNTERING '", "', '", 
                     "' AS '", "' IN preference;'", "' IN constraint;'", 
                     "' IN '", "' IN  obstacle;'", "'RE-ROUTING AND RE-PLANNING;'", 
                     "'KEEP IN CURRENT LANE;'", "'EXIT THE CURRENT LANE;'", 
                     "'MAKE '", "' '", "' LANE CHANGES'", "' WITHIN '", 
                     "'METERS'", "'ENTER THE '", "' MOST LANE'", "' LANE FROM THE '", 
                     "' TURN'", "'straight'", "' LANE'", "'BORROW LANES;'", 
                     "'BORROW THE '", "' LANE;'", "'FOLLOW THE CAR IN FRONT;'", 
                     "'STOP BDFORE THE INTERSECTION;'", "'NOT STOP BDFORE THE INTERSECTION;'", 
                     "'PARK THE CAR IN PARKING SPACE '", "'OPEN SPACE LAUNCH;'", 
                     "'PULL OVER TO THE '", "'EMERGENCY PULL OVER;'", "'EMERGENCY STOP;'", 
                     "'VEHICLE LAUNCH;'", "'KEEP THE CURRENT SPEED'", "' WITHOUT CHECK'", 
                     "'KEEP A SPEED OF '", "' KM/H'", "'ACCELERATE'", "'DECELERATE'", 
                     "' TO '", "' KM/H WITH '", "' M/S^2 '", "'ACCELERATION'", 
                     "'DECELERATION'", "'TURN ON'", "'TURN OFF'", "' THE '", 
                     "'SWITCH;'", "'HONK THE HORN;'", "'CLEAR REAL TIME SETTING;'", 
                     "'CLEAR '", "'speed'", "'stutes'", "'trajectory'", 
                     "'scenario'", "'obstacle'", "'preference'", "' related SETTING;'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Preference_pra", 
                      "Constraint_pra", "Traffic_signal_list", "Traffic_signal_pra", 
                      "Road_list", "Road_pra", "Both_pra", "Obstacle_pra", 
                      "Weather_list", "Weather_pra", "Left_Right", "Vehicle_light", 
                      "Num", "Bool", "String", "Ordinal_num", "WHITESPACE" ]

    RULE_prog = 0
    RULE_intercation = 1
    RULE_driving_pattern = 2
    RULE_user_defined_driving_pattern = 3
    RULE_predefined_driving_pattern = 4
    RULE_predefined_driving_pattern_set = 5
    RULE_preferences_config = 6
    RULE_preferences = 7
    RULE_security_config = 8
    RULE_constraints = 9
    RULE_scenario_config = 10
    RULE_scenario = 11
    RULE_traffic_signal_scenario = 12
    RULE_traffic_signal = 13
    RULE_road_scenario = 14
    RULE_road = 15
    RULE_obstacle_config = 16
    RULE_obstacle = 17
    RULE_weather_config = 18
    RULE_weather = 19
    RULE_real_time_command = 20
    RULE_adjust_driving_pattern = 21
    RULE_receive_trajectory_command = 22
    RULE_receive_speed_command = 23
    RULE_receive_stutes_command = 24
    RULE_clear_real_time_setting = 25
    RULE_value = 26

    ruleNames =  [ "prog", "intercation", "driving_pattern", "user_defined_driving_pattern", 
                   "predefined_driving_pattern", "predefined_driving_pattern_set", 
                   "preferences_config", "preferences", "security_config", 
                   "constraints", "scenario_config", "scenario", "traffic_signal_scenario", 
                   "traffic_signal", "road_scenario", "road", "obstacle_config", 
                   "obstacle", "weather_config", "weather", "real_time_command", 
                   "adjust_driving_pattern", "receive_trajectory_command", 
                   "receive_speed_command", "receive_stutes_command", "clear_real_time_setting", 
                   "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    Preference_pra=75
    Constraint_pra=76
    Traffic_signal_list=77
    Traffic_signal_pra=78
    Road_list=79
    Road_pra=80
    Both_pra=81
    Obstacle_pra=82
    Weather_list=83
    Weather_pra=84
    Left_Right=85
    Vehicle_light=86
    Num=87
    Bool=88
    String=89
    Ordinal_num=90
    WHITESPACE=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_prog

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StartContext(ProgContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.ProgContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def intercation(self):
            return self.getTypedRuleContext(UserIntercationParser.IntercationContext,0)

        def EOF(self):
            return self.getToken(UserIntercationParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)



    def prog(self):

        localctx = UserIntercationParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            localctx = UserIntercationParser.StartContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.intercation()
            self.state = 55
            self.match(UserIntercationParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntercationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_intercation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DrivingpatternContext(IntercationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.IntercationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def driving_pattern(self):
            return self.getTypedRuleContext(UserIntercationParser.Driving_patternContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrivingpattern" ):
                listener.enterDrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrivingpattern" ):
                listener.exitDrivingpattern(self)


    class RealtimecommandContext(IntercationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.IntercationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def real_time_command(self):
            return self.getTypedRuleContext(UserIntercationParser.Real_time_commandContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRealtimecommand" ):
                listener.enterRealtimecommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRealtimecommand" ):
                listener.exitRealtimecommand(self)



    def intercation(self):

        localctx = UserIntercationParser.IntercationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_intercation)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = UserIntercationParser.DrivingpatternContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.driving_pattern()
                pass

            elif la_ == 2:
                localctx = UserIntercationParser.RealtimecommandContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.real_time_command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Driving_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_driving_pattern

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UserdefineddrivingpatternContext(Driving_patternContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Driving_patternContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def user_defined_driving_pattern(self):
            return self.getTypedRuleContext(UserIntercationParser.User_defined_driving_patternContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUserdefineddrivingpattern" ):
                listener.enterUserdefineddrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUserdefineddrivingpattern" ):
                listener.exitUserdefineddrivingpattern(self)


    class PredefineddrivingpatternContext(Driving_patternContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Driving_patternContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def predefined_driving_pattern(self):
            return self.getTypedRuleContext(UserIntercationParser.Predefined_driving_patternContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredefineddrivingpattern" ):
                listener.enterPredefineddrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredefineddrivingpattern" ):
                listener.exitPredefineddrivingpattern(self)



    def driving_pattern(self):

        localctx = UserIntercationParser.Driving_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_driving_pattern)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 5]:
                localctx = UserIntercationParser.UserdefineddrivingpatternContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.user_defined_driving_pattern()
                pass
            elif token in [6]:
                localctx = UserIntercationParser.PredefineddrivingpatternContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.predefined_driving_pattern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class User_defined_driving_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_user_defined_driving_pattern

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UserdrivingpatternContext(User_defined_driving_patternContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.User_defined_driving_patternContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(UserIntercationParser.String, 0)
        def Weather_list(self):
            return self.getToken(UserIntercationParser.Weather_list, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUserdrivingpattern" ):
                listener.enterUserdrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUserdrivingpattern" ):
                listener.exitUserdrivingpattern(self)


    class CanclecurrentdrivingpatternContext(User_defined_driving_patternContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.User_defined_driving_patternContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCanclecurrentdrivingpattern" ):
                listener.enterCanclecurrentdrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCanclecurrentdrivingpattern" ):
                listener.exitCanclecurrentdrivingpattern(self)



    def user_defined_driving_pattern(self):

        localctx = UserIntercationParser.User_defined_driving_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_user_defined_driving_pattern)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = UserIntercationParser.UserdrivingpatternContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(UserIntercationParser.T__0)
                self.state = 66
                self.match(UserIntercationParser.String)
                self.state = 67
                self.match(UserIntercationParser.T__1)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 68
                    self.match(UserIntercationParser.T__2)
                    self.state = 69
                    self.match(UserIntercationParser.Weather_list)


                self.state = 72
                self.match(UserIntercationParser.T__3)
                pass
            elif token in [5]:
                localctx = UserIntercationParser.CanclecurrentdrivingpatternContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(UserIntercationParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predefined_driving_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_predefined_driving_pattern

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SetdrivingpatternContext(Predefined_driving_patternContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_patternContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(UserIntercationParser.String, 0)
        def predefined_driving_pattern_set(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UserIntercationParser.Predefined_driving_pattern_setContext)
            else:
                return self.getTypedRuleContext(UserIntercationParser.Predefined_driving_pattern_setContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetdrivingpattern" ):
                listener.enterSetdrivingpattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetdrivingpattern" ):
                listener.exitSetdrivingpattern(self)



    def predefined_driving_pattern(self):

        localctx = UserIntercationParser.Predefined_driving_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predefined_driving_pattern)
        self._la = 0 # Token type
        try:
            localctx = UserIntercationParser.SetdrivingpatternContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(UserIntercationParser.T__5)
            self.state = 77
            self.match(UserIntercationParser.String)
            self.state = 78
            self.match(UserIntercationParser.T__1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.predefined_driving_pattern_set()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 52352) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predefined_driving_pattern_setContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UserIntercationParser.RULE_predefined_driving_pattern_set

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WeatherconfigContext(Predefined_driving_pattern_setContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_pattern_setContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def weather_config(self):
            return self.getTypedRuleContext(UserIntercationParser.Weather_configContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeatherconfig" ):
                listener.enterWeatherconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeatherconfig" ):
                listener.exitWeatherconfig(self)


    class ScenarioconfigContext(Predefined_driving_pattern_setContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_pattern_setContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def scenario_config(self):
            return self.getTypedRuleContext(UserIntercationParser.Scenario_configContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenarioconfig" ):
                listener.enterScenarioconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenarioconfig" ):
                listener.exitScenarioconfig(self)


    class SecurityconfigContext(Predefined_driving_pattern_setContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_pattern_setContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def security_config(self):
            return self.getTypedRuleContext(UserIntercationParser.Security_configContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecurityconfig" ):
                listener.enterSecurityconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecurityconfig" ):
                listener.exitSecurityconfig(self)


    class ObstacleconfigContext(Predefined_driving_pattern_setContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_pattern_setContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def obstacle_config(self):
            return self.getTypedRuleContext(UserIntercationParser.Obstacle_configContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObstacleconfig" ):
                listener.enterObstacleconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObstacleconfig" ):
                listener.exitObstacleconfig(self)


    class PreferencesconfigContext(Predefined_driving_pattern_setContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UserIntercationParser.Predefined_driving_pattern_setContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def preferences_config(self):
            return self.getTypedRuleContext(UserIntercationParser.Preferences_configContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreferencesconfig" ):
                listener.enterPreferencesconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreferencesconfig" ):
                listener.exitPreferencesconfig(self)



    def predefined_driving_pattern_set(self):
